objects/Account_Team_Member__c.object
<CustomObject>
    <description>The default account teams doesnt privide the functionalities which we need for the Owner Structures.</description>
    <label>Account Team Member</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Account Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team Member</relationshipLabel>
        <relationshipName>Account_Team_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <description>Placeholder for Username or &quot;Unassigned&quot;</description>
        <label>Team Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_assigned__c</fullName>
        <formula>ISBLANK(User__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LandlordSince_c__c</fullName>
        <label>Landlord since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hausbesitzer_Ort__c</fullName>
        <formula>BLANKVALUE(User__r.City, &quot;Berlin&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hausbesitzer Ort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Roles__c</fullName>
        <label>Team Member Roles</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>First Contact Responsibility</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Landlord Caregiver</fullName>
                </value>
                <value>
                    <fullName>Landlord Doctor</fullName>
                </value>
                <value>
                    <fullName>Placement Caregiver</fullName>
                </value>
                <value>
                    <fullName>Placement Doctor</fullName>
                </value>
                <value>
                    <fullName>Recruitment responsibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Running_User_is_Landlord__c</fullName>
        <formula>IF(  User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User is Landlord</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Institution</fullName>
        <active>true</active>
        <description>Die Verwaltung der Hausbesitzer für Kliniken.</description>
        <label>Hausbesitzer Klinik</label>
    </recordTypes>
    <recordTypes>
        <fullName>Doctor_Caregiver</fullName>
        <active>true</active>
        <description>Die Verwaltung der Besitzer für Ärzte und Pfleger.</description>
        <label>Besitzer Ärzte/Plfeger</label>
    </recordTypes>
</CustomObject>